# Stone-eval

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  chekhov_analysis.md  pyproject.toml  requirements.txt
chekhov/: README.md  chekhov_analysis.md
data/: README.md
data/chekhov/: README.md
data/foreshadow_causality_benchmark/: README.md
data/processed/: ARCHIVE.md
docs/: README.md  evaluation_workflow.md
docs/history/: 2026-06-11_evaluation_checkpoint.md  2026-06-11_outputs_checkpoint.md  2026-06-11_processed_data_checkpoint.md  README.md
documentations/: Evaluation.md  Literature Review.md  cfpg_reproduction_design.md  emotion_scoring_schemes.md  value_transformation_deconstruction.md
documentations/experiments/: 2026-06-11_pre_constory_bench_archive.md  README.md
experiments/: README.md
experiments/hongloumeng_constory_smoke/: README.md
experiments/hongloumeng_emotion_arc/: README.md  emotion_scoring_schemes.md
experiments/hongloumeng_longstoryeval/: README.md
foreshadow/: README.md
outputs/: ARCHIVE.md
poetry_data/: README.md
resources/: README.md
scripts/: build_cfpg_summary_timeline.py  build_honglou_value_graph.py  cfpg_prompt_utils.py  extract_honglou_ftp.py  plot_smoothed_emotion_arc.py  render_cfpg_layers_review.py  render_honglou_summary_review.py  render_honglou_value_graph_html.py  run_consistency.sh  run_critique.sh  run_emotion.sh  run_social.sh  summarize_honglou_booksum.py
stone_eval/: __init__.py  cli.py  corpus.py  honglou_schema.py  longstory.py
tests/: test_short_story_cfpg.py
(+395 files in other folders)
