[project]
name = "stone-eval"
version = "0.1.0"
description = "Chinese long-form narrative evaluation, literary analysis, and foreshadowing research tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "jieba>=0.42",
    "datasets>=2.14",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
stone-eval = "stone_eval.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stone_eval*"]

[tool.ruff]
line-length = 100
